Add jSerialComm, print list of ports